// Auto Provisioning Policy

syntax = "proto3";
package edgeproto;

import "google/api/annotations.proto";
import "result.proto";
import "github.com/mobiledgex/edge-cloud/protogen/protogen.proto";
import "gogoproto/gogo.proto";
import "autoscalepolicy.proto";
import "cloudletkey.proto";
import "app.proto";
import "clusterinst.proto";
import "github.com/mobiledgex/edge-cloud/d-match-engine/dme-proto/loc.proto";
import "github.com/mobiledgex/edge-cloud/d-match-engine/dme-proto/appcommon.proto";
import "google/protobuf/timestamp.proto";

option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

// AutoProvPolicy defines the automated provisioning policy
message AutoProvPolicy {
  // Fields are used for the Update API to specify which fields to apply
  repeated string fields = 1;
  // Unique identifier key
  PolicyKey key = 2 [(gogoproto.nullable) = false];
  // Minimum number of clients within the auto deploy interval to trigger deployment
  uint32 deploy_client_count = 3;
  // Number of intervals to check before triggering deployment
  uint32 deploy_interval_count = 4 [(protogen.test_update) = true];
  // Allowed deployment locations
  repeated AutoProvCloudlet cloudlets = 5 [(protogen.refers_to) = "Cloudlet"];
  // Minimum number of active instances for High-Availability
  uint32 min_active_instances = 6;
  // Maximum number of instances (active or not)
  uint32 max_instances = 7;
  // Number of active clients for the undeploy interval below which trigers undeployment, 0 (default) disables auto undeploy
  uint32 undeploy_client_count = 8;
  // Number of intervals to check before triggering undeployment
  uint32 undeploy_interval_count = 9;
  // Preparing to be deleted
  bool delete_prepare = 10 [(protogen.backend) = true, (protogen.hidetag) = "nocmp"]; 
  option (protogen.generate_matches) = true;
  option (protogen.generate_cud) = true;
  option (protogen.generate_cud_test) = true;
  option (protogen.generate_cache) = true;
  option (protogen.notify_cache) = true;
  option (protogen.alias) = "name=Key.Name,app-org=Key.Organization";
  option (protogen.uses_org) = "key=Organization";
  option (protogen.generate_lookup_by_sublist) = "CloudletKey";
  option (protogen.noconfig) = "Cloudlets:#.Loc,DeletePrepare";
}

// AutoProvCloudlet stores the potential cloudlet and location for DME lookup
message AutoProvCloudlet {
  // Cloudlet key
  CloudletKey key = 1 [(gogoproto.nullable) = false];
  // Cloudlet location
  distributed_match_engine.Loc loc = 2 [(gogoproto.nullable) = false];
}

// AutoProvCount is used to send potential cloudlet and location counts from DME to Controller
message AutoProvCount {
  // Target app
  AppKey app_key = 1 [(gogoproto.nullable) = false];
  // Target cloudlet
  CloudletKey cloudlet_key = 2 [(gogoproto.nullable) = false];
  // FindCloudlet client count
  uint64 count = 3;
  // Process count immediately
  bool process_now = 4;
  // Immediately deploy to clusterinst
  ClusterInstKey deploy_now_key = 5 [(gogoproto.nullable) = false];
}

// AutoProvCounts is used to send potential cloudlet and location counts from DME to Controller
message AutoProvCounts {
  // DME node name
  string dme_node_name = 1;
  // Timestamp when the metric was captured
  google.protobuf.Timestamp timestamp = 2 [(gogoproto.nullable) = false];
  // List of DmeCount from DME
  repeated AutoProvCount counts = 3;
  option (protogen.notify_message) = true;
  option (protogen.notify_print_send_recv) = false;
}

// AutoProvPolicyCloudlet is used to add and remove Cloudlets from the Auto Provisioning Policy
message AutoProvPolicyCloudlet {
  // Unique policy identifier key
  PolicyKey key = 1 [(gogoproto.nullable) = false, (protogen.refers_to) = "AutoProvPolicy"];
  // Cloudlet identifier key
  CloudletKey cloudlet_key = 2 [(gogoproto.nullable) = false, (protogen.refers_to) = "Cloudlet"];
  option (protogen.alias) = "name=Key.Name,app-org=Key.Organization,cloudlet=CloudletKey.Name,cloudlet-org=CloudletKey.Organization,federated-org=CloudletKey.FederatedOrganization";
}

service AutoProvPolicyApi {
  // Create an Auto Provisioning Policy
  rpc CreateAutoProvPolicy(AutoProvPolicy) returns (Result) {
    option (google.api.http) = {
      post: "/create/autoprovpolicy"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceDeveloperPolicy,ActionManage,Key.Organization";
    option (protogen.method_also_required) = "MinNodes,MaxNodes";
    option (protogen.mc2_api_requires_org) = "Key.Organization";
    option (protogen.mc2_custom_authz) = true;
  }
  // Delete an Auto Provisioning Policy
  rpc DeleteAutoProvPolicy(AutoProvPolicy) returns (Result) {
    option (google.api.http) = {
      post: "/delete/autoprovpolicy"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceDeveloperPolicy,ActionManage,Key.Organization";
  }
  // Update an Auto Provisioning Policy
  rpc UpdateAutoProvPolicy(AutoProvPolicy) returns (Result) {
    option (google.api.http) = {
      post: "/update/autoprovpolicy"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceDeveloperPolicy,ActionManage,Key.Organization";
    option (protogen.mc2_custom_authz) = true;
  }
  // Show Auto Provisioning Policies. Any fields specified will be used to filter results.
  rpc ShowAutoProvPolicy(AutoProvPolicy) returns (stream AutoProvPolicy) {
    option (google.api.http) = {
      post: "/show/autoprovpolicy"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceDeveloperPolicy,ActionView,Key.Organization";
  }
  // Add a Cloudlet to the Auto Provisioning Policy
  rpc AddAutoProvPolicyCloudlet(AutoProvPolicyCloudlet) returns (Result) {
    option (google.api.http) = {
      post: "/add/autoprovpolicycloudlet"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceDeveloperPolicy,ActionManage,Key.Organization";
    option (protogen.input_required) = true;
    option (protogen.mc2_custom_authz) = true;
  }
  // Remove a Cloudlet from the Auto Provisioning Policy
  rpc RemoveAutoProvPolicyCloudlet(AutoProvPolicyCloudlet) returns (Result) {
    option (google.api.http) = {
      post: "/rm/autoprovpolicycloudlet"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceDeveloperPolicy,ActionManage,Key.Organization";
    option (protogen.input_required) = true;
  }
}

message AutoProvInfo {
  // Fields are used for the Update API to specify which fields to apply
  repeated string fields = 1;
  // Cloudlet Key
  CloudletKey key = 2 [(gogoproto.nullable) = false];
  // Id of client assigned by server (internal use only)
  int64 notify_id = 3 [(protogen.hidetag) = "nocmp"];
  // failover result state
  distributed_match_engine.MaintenanceState maintenance_state = 4;
  // Failover actions done if any
  repeated string completed = 5;
  // Errors if any
  repeated string errors = 6;
  option (protogen.generate_matches) = true;
  option (protogen.generate_cud) = true;
  option (protogen.generate_cache) = true;
  option (protogen.notify_cache) = true;
  option (protogen.notify_flush) = true;
  option (protogen.uses_org) = "none";
}
